# daredata_foundations

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
life_expectancy/: cleaning.py  data.py  main.py  region.py
life_expectancy/tests/: conftest.py  test_cleaning.py  test_data.py  test_region.py
