[project]
name = "life_expectancy"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
description = "life expectancy project of the Foundations Learning Path"
authors = [{name = "Luis Teixeira<luis.teixeira@ren.pt>"}]
dependencies = ["pandas", "click"]

[project.optional-dependencies]
dev = ["pytest", "pylint", "pytest-cov", "toml", "pre-commit"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["life_expectancy"]

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.pylint."messages control"]
disable = [
   "missing-module-docstring",
   "no-value-for-parameter"
   # Add any other checks you want to disable here
]

[tool.coverage.report]
fail_under = 80